--- a/spring-api/src/main/resources/persistence-mysql.properties
+++ b/spring-api/src/main/resources/persistence-mysql.properties
@@ -2,7 +2,7 @@
 # JDBC connection properties
 #
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/ticket_system?useSSL=false
+jdbc.url=jdbc:mysql://localhost:3306/myjira?useSSL=false
 jdbc.user=hbstudent
 jdbc.password=hbstudent
 
