--- a/angular/package.json
+++ b/angular/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "bootstrap": "^3.4.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.4",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "ng2-cookies": "^1.0.12",
     "rjx": "^1.6.1",
     "rxjs": "^6.3.3",
